tests/ui/traits/object/issue-44454-2.stderr
error[E0310]: the parameter type `ARG` may not live long enough
  --> $DIR/issue-44454-2.rs:7:10
   |
LL | fn hr<T: Trait<ARG> + ?Sized, ARG>(x: T::Assoc) -> Box<dyn AsRef<str> + 'static> {
   |          ^^^^^^^^^^
   |          |
   |          the parameter type `ARG` must be valid for the static lifetime...
   |          ...so that the type `ARG` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/issue-44454-2.rs:3:18
   |
LL | trait Trait<ARG: 'static>: 'static {
   |                  ^^^^^^^
help: consider adding an explicit lifetime bound
   |
LL | fn hr<T: Trait<ARG> + ?Sized, ARG: 'static>(x: T::Assoc) -> Box<dyn AsRef<str> + 'static> {
   |                                  +++++++++

error[E0310]: the associated type `<T as Trait<ARG>>::Assoc` may not live long enough
  --> $DIR/issue-44454-2.rs:9:5
   |
LL |     Box::new(x)
   |     ^^^^^^^^^^^
   |     |
   |     the associated type `<T as Trait<ARG>>::Assoc` must be valid for the static lifetime...
   |     ...so that the type `<T as Trait<ARG>>::Assoc` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn hr<T: Trait<ARG> + ?Sized, ARG>(x: T::Assoc) -> Box<dyn AsRef<str> + 'static> where <T as Trait<ARG>>::Assoc: 'static {
   |                                                                                  +++++++++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
